--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,10 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: black;
+}
+
 .agatha-books {
   padding-top: 5rem;
 }
@@ -112,12 +119,10 @@ label {
 
 .book-info-container {
   width: 50%;
+  height: auto;
   margin: auto;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;  
+.book-info-container {
+  padding-bottom: 5rem;
 }
